# KOSMONAUT-engine

./: .gitignore  CMakeLists.txt  README.md  gprof.out  main  makefile
data/: config.conf
data/models/: cube.mtl
data/models/stealth/: stealth.mtl
data/shaders/: fragment_shader.glsl  vertex_shader.glsl
info/: dependencies  notes  roadmap
info/Ideas/: ship types
info/SCBE/: config_file_description  main_functions
info/kosmonaut/: config_file_description  main_functions
src/: main.c
src/SCBE/general/: communicating_data.c  config.c  engine_get_event.c  engine_get_window.c  engine_init.c  general.h
src/SCBE/gfx/: gfx.h  gfx_init.c
src/SCBE/gfx/gl/: camera.c  loading_shaders.c  new_frame.c
src/SCBE/gfx/models/: load_model.c  mesh.c  model_transformations.c  models_management.c  primitives_cube.c  primitives_triangle.c
src/SCBE/gfx/models/model_formats/: obj.c
src/SCBE/gfx/shaders/: vertex_shader.glsl
src/SCBE/maths/: maths.c  maths.h
src/game/: main.c
src/game/game/: SBC.h  controls.c  coordinates.c  init.c
src/game/game/hud/: hud.h
src/game/game/objects/: object.h  objects.h  ships.c
src/game/game/objects/ships/: ships_list.c  updates.c
src/include/engine/: engine_get_event.c  engine_get_window.c  engine_init.c
src/include/gfx/: gfx.h  gfx_init.c
src/include/gfx/gl/: camera.c  config_functions.c  gfx.h  gfx_create_cam.c  gfx_init.c  gfx_loading_shaders.c  gfx_new_frame.c  loading_shaders.c  new_frame.c
src/include/gfx/models/: handles.c  primitives.c  primitives_cube.c  primitives_triangle.c
src/include/gfx/shaders/: fragment_shader.glsl  vertex_shader.glsl
src/include/maths/: maths.c  maths.h
src/kosmonaut-examples/simple_example/: main.c
src/kosmonaut/general/: config.c  engine_init.c  fps.c  general.h  logging.c  module_communication.c  shutdown.c
src/kosmonaut/gfx/: gfx.h  gfx_init.c
src/kosmonaut/gfx/data/: data.h
src/kosmonaut/gfx/data/textures/: bmp.c  texture_load.c
src/kosmonaut/gfx/gl/: camera.c  loading_shaders.c  new_frame.c
src/kosmonaut/gfx/models/: load_model.c  model_transformations.c  models_management.c  primitive_quad.c  primitives_cube.c  primitives_triangle.c  skybox.c  texture.c
src/kosmonaut/gfx/models/model_formats/: load_model.c  obj.c
src/kosmonaut/gfx/models/texture/: bmp.c  texture.c
src/kosmonaut/gfx/shaders/: fragment_shader.glsl  vertex_shader.glsl
src/kosmonaut/gfx/ui/: cursor.c  text.c  ui.c  ui.h  ui_window_management.c  window.c
src/kosmonaut/maths/: maths.c  maths.h
src/kosmonaut/net/: net.c  net.h
